--- a/public/css/about.css
+++ b/public/css/about.css
@@ -50,20 +50,23 @@ body {
     width: 55%;
 }
 
-.text-block h1 {
-    font-size: 42px;
+.text-block h2 {
+    font-size: 50px;
+    margin: auto;
     margin-bottom: 10px;
 }
 
 .text-block p {
-    font-size: 16px;
+    font-size: 25px;
     line-height: 1.6;
     margin-bottom: 15px;
+    text-align: justify;
 }
 
 /* IMAGE */
 .image-block img {
-    width: 380px;
+    margin-top: 175px;
+    width: 550px;
     height: auto;
 
 }
@@ -81,7 +84,7 @@ body {
     }
 
     .image-block img {
-        margin-top: 25px;
+        margin-top: 300px;
         width: 300px;
     }
 }
